package streamingService

import (
	"context"
	"fmt"
	"io"

	pb "musis.servidordestreaming/grpc-servidor/serviciosStreaming"
)

type ProcedimientosStreaming struct {
	client pb.AudioServiceClient
}

func New(client pb.AudioServiceClient) *ProcedimientosStreaming {
	return &ProcedimientosStreaming{
		client: client,
	}
}

// StreamAudio se conecta al servidor gRPC y retransmite los fragmentos de audio.
// No tiene conocimiento de la vista ni del reproductor de audio.
func (pr *ProcedimientosStreaming) StreamAudio(songId int32, ctx context.Context, audioChunksChan chan<- []byte, statusChan chan<- string) {
	// Es responsabilidad de esta funciÃ³n cerrar el canal de audio cuando termine.
	defer close(audioChunksChan)

	client := pr.client

	// PeticiÃ³n de ejemplo
	request := &pb.PeticionDTO{Id: songId}

	// Llamada al mÃ©todo de streaming
	stream, err := client.EnviarCancionMedianteStream(ctx, request)
	if err != nil {
		statusChan <- fmt.Sprintf("âŒ Error al iniciar el stream: %v", err)
		return
	}

	statusChan <- "ðŸŽ§ Streaming iniciado. Recibiendo datos..."

	for {
		// Recibir un fragmento de la canciÃ³n
		fragmento, err := stream.Recv()
		if err == io.EOF {
			// El stream ha finalizado de forma natural
			statusChan <- "âœ… Stream finalizado por el servidor."
			return
		}
		if err != nil {
			// Manejar errores del stream, incluyendo la cancelaciÃ³n desde el cliente.
			// `context.Canceled` es un error esperado si el usuario para la reproducciÃ³n.
			if ctx.Err() == context.Canceled {
				statusChan <- "Stream cancelado por el usuario."
			} else {
				statusChan <- fmt.Sprintf("âŒ Error durante el streaming: %v", err)
			}
			return
		}

		// Enviar el fragmento de audio al canal para que otro componente lo procese
		// Usamos un select para no bloquear si el contexto se cancela mientras enviamos.
		select {
		case <-ctx.Done():
			statusChan <- "Stream cancelado por el usuario."
			return
		case audioChunksChan <- fragmento.GetData():
			// El fragmento fue enviado exitosamente
		}
	}
}

func (pr *ProcedimientosStreaming) StreamAudioOfSong(request *pb.PeticionStreamDTO, ctx context.Context, audioChunksChan chan<- []byte, statusChan chan<- string) {
	// Es responsabilidad de esta funciÃ³n cerrar el canal de audio cuando termine.
	defer close(audioChunksChan)

	client := pr.client

	// Llamada al mÃ©todo de streaming
	stream, err := client.StremearCancion(ctx, request)
	if err != nil {
		statusChan <- fmt.Sprintf("âŒ Error al iniciar el stream: %v", err)
		return
	}

	statusChan <- "ðŸŽ§ Streaming iniciado. Recibiendo datos..."

	for {
		// Recibir un fragmento de la canciÃ³n
		fragmento, err := stream.Recv()
		if err == io.EOF {
			// El stream ha finalizado de forma natural
			statusChan <- "âœ… Stream finalizado por el servidor."
			return
		}
		if err != nil {
			// Manejar errores del stream, incluyendo la cancelaciÃ³n desde el cliente.
			// `context.Canceled` es un error esperado si el usuario para la reproducciÃ³n.
			if ctx.Err() == context.Canceled {
				statusChan <- "Stream cancelado por el usuario."
			} else {
				statusChan <- fmt.Sprintf("âŒ Error durante el streaming: %v", err)
			}
			return
		}

		// Enviar el fragmento de audio al canal para que otro componente lo procese
		// Usamos un select para no bloquear si el contexto se cancela mientras enviamos.
		select {
		case <-ctx.Done():
			statusChan <- "Stream cancelado por el usuario."
			return
		case audioChunksChan <- fragmento.GetData():
			// El fragmento fue enviado exitosamente
		}
	}
}
